# charybdis

./: .appveyor.yml  .gitignore  .mailmap  .travis.yml  CODE_OF_CONDUCT.md  CREDITS  Makefile.am  NEWS  NEWS.md  README.md  aclocal.m4  appveyor.yml  ar-lib  autogen.sh  configure  configure.ac  ltmain.sh  meson.build  ylwrap
authd/: Makefile.am  dns.c  getaddrinfo.c  getnameinfo.c  meson.build  provider.c  provider.h  res.c
authd/providers/: blacklist.c  dnsbl.c  ident.c  opm.c  rdns.c
bandb/: Makefile.am  bandb.c  bantool.c  meson.build
doc/: Makefile.am  Makefile.in  credits-past.txt  example.conf  ircd.conf.example  meson.build  reference.conf  spamfilter.conf.example
doc/oper-guide/: Makefile  charybdis-oper-guide.rst  cmodes.rst  commands.rst  conf.py  config.rst  index.rst  intro.rst  make.bat  oprivs.rst  ucommands.rst  umodes.rst
doc/technical/: capab.txt  hooks.txt  ts6-protocol.txt
extensions/: Makefile.am  Makefile.in  chantype_dummy.c  chm_adminonly.c  chm_insecure.c  chm_nonotice.c  chm_operonly.c  chm_operpeace.c  chm_sslonly.c  createauthonly.c  createoperonly.c  drain.c  extb_canjoin.c  extb_channel.c  extb_channel.cc  extb_hostmask.c  extb_oper.c  extb_ssl.c  extb_usermode.c  filter.c  force_user_invis.c  helpops.c  hurt.c  identify_msg.c  index.txt  invite_notify.c  ip_cloaking.c  ip_cloaking_3.0.c  ip_cloaking_4.0.c  ip_cloaking_hmac.c  ip_cloaking_old.c  m_extendchans.c  m_findforwards.c  m_helpop.c  m_mkpasswd.c  m_ojoin.c  m_okick.c  m_omode.c  m_opme.c  m_remove.c  (+28 more)
help/: Makefile.am  gen-help-index.sh  meson.build  opers.cmds  users.cmds
help/opers/: cmode  extban  grant  index  invite  monitor  quit  resv  set  snomask  umode  userhost  who
help/users/: umode
include/: authproc.h  channel.h  channel_access.h  chmode.h  class.h  client.h  defaults.h  exmask.h  hook.h  hostmask.h  ircd.h  ircd_defs.h  ircd_getopt.h  listener.h  m_info.h  match.h  meson.build  messages.h  modules.h  msg.h  msgbuf.h  newconf.h  numeric.h  parse.h  proc.h  propertyset.h  reject.h  restart.h  role.h  s_assert.h  s_conf.h  s_newconf.h  s_user.h  scache.h  send.h  serno.h.SH  setup.h.meson  sslproc.h  stdinc.h  supported.h
include/inline/: stringops.h
include/ircd/: client.h
ircd/: Makefile.am  Makefile.in  authproc.c  authproc.cc  bandbi.c  cache.c  capability.c  channel.c  channel_access.c  chmode.c  client.c  client.cc  dns.c  exmask.c  getopt.c  hash.c  hook.c  hostmask.c  irc_radixtree.c  ircd.c  ircd_parser.y  listener.c  listener.cc  logger.c  match.c  meson.build  modules.c  monitor.c  msgbuf.c  msgbuf.cc  newconf.c  packet.c  parse.c  proc.c  propertyset.c  reject.c  restart.c  role.c  s_conf.c  s_conf.cc  (+12 more)
libratbox/: Makefile.in  aclocal.m4  configure  configure.ac
libratbox/include/: commio-ssl.h  ratbox_lib.h  rb_commio.h  rb_helper.h  rb_memory.h
libratbox/src/: Makefile.in  balloc.c  commio.c  crypt.c  export-syms.txt  gnutls.c  gnutls_ratbox.h  kqueue.c  linebuf.c  mbedtls.c  mbedtls_embedded_data.h  mbedtls_ratbox.h  nossl.c  openssl.c  openssl_ratbox.h  ratbox_lib.c  snprintf.c  tools.c
librb/: Makefile.am  TODO  acinclude.m4  autogen.sh  configure.ac  librb.pc.in
librb/include/: event-int.h  librb-config.h.meson  librb_config.h.meson  meson.build  rb_commio.h  rb_lib.h  rb_linebuf.h  rb_patricia.h  rb_tools.h
librb/src/: Makefile.am  balloc.c  commio.c  crypt.c  devpoll.c  dictionary.c  epoll.c  event.c  export-syms.txt  gnutls.c  gnutls_ratbox.h  helper.c  kqueue.c  linebuf.c  mbedtls.c  mbedtls_ratbox.h  meson.build  nossl.c  openssl.c  openssl_ratbox.h  patricia.c  poll.c  ports.c  radixtree.c  rawbuf.c  rb_lib.c  select.c  sigio.c  tools.c  unix.c  version.c.SH  version.c.sh  win32.c
m4/: charybdis.m4  pkg.m4
modules/: Makefile.am  Makefile.in  cap_prop_notify.c  cap_server_time.c  cap_sts.c  chm_nocolour.c  chm_noctcp.c  extb_group.c  extb_ssl.c  filter.c  m_account_tag.c  m_alias.c  m_away.c  m_cap.c  m_capab.c  m_challenge.c  m_chghost.c  m_cmessage.c  m_connect.c  m_dline.c  m_etrace.c  m_grant.c  m_help.c  m_info.c  m_invite.c  m_ircx_access.c  m_ircx_base.c  m_ircx_prop.c  m_ircx_prop_adminkey.c  m_ircx_prop_member_of.c  m_ircx_prop_onjoin.c  m_ircx_prop_opkey.c  m_ison.c  m_kline.c  m_knock.c  m_links.c  m_list.c  m_map.c  m_motd.c  m_names.c  (+38 more)
modules/core/: m_ban.c  m_die.c  m_error.c  m_identified.c  m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_modules.c  m_nick.c  m_part.c  m_quit.c  m_server.c  m_server.cc  m_squit.c  meson.build
proc/: Makefile.am  p_example.c  proc_module.c  proc_module.h
rb/: tools.c
src/: bandbi.c  cache.c  capability.c  channel.c  chmode.c  client.c  getopt.c  hash.c  hook.c  hostmask.c  ircd.c  ircd_lexer.l  ircd_parser.y  ircd_signal.c  listener.c  messages.tab  modules.c  newconf.c  parse.c  privilege.c  res.c  s_auth.c  s_conf.c  s_newconf.c  s_serv.c  s_user.c  scache.c  sslproc.c  supported.c
ssld/: Makefile.am  meson.build  ssld.c
tests/: Makefile.am  README  TESTS  client_util.c  client_util.h  hostmask1.c  ircd_util.c  ircd_util.h  msgbuf_parse1.c  msgbuf_unparse1.c  rb_dictionary1.c  rb_linebuf_put1.c  rb_snprintf_append1.c  rb_snprintf_try_append1.c  runtests.c  sasl_abort1.c  sasl_abort1.conf  send1.c  send1.conf  serv_connect1.c  serv_connect1.conf  substitution1.c
tests/runtime/: help
tests/tap/: basic.c  basic.h  float.c  float.h  libtap.sh  macros.h
testsuite/: ircd.conf.1  ircd.conf.2  ircd.conf.3
tools/: Makefile.am  README.mkpasswd  meson.build  mkpasswd.c  smoketest.sh
wsockd/: Makefile.am  meson.build  wsockd.c
