authd_exe = executable('authd',
  'authd.c',
  'dns.c',
  'getaddrinfo.c',
  'getnameinfo.c',
  'notice.c',
  'provider.c',
  'res.c',
  'reslib.c',
  'reslist.c',
  'providers/dnsbl.c',
  'providers/ident.c',
  'providers/rdns.c',
  'providers/opm.c',
  link_with: [librb_lib],
  include_directories: [librb_inc, base_inc])
