extensions = [
  'chantype_dummy',
  'chm_adminonly',
  'chm_operonly',
  'chm_operonly_compat',
  'chm_insecure',
  'chm_nonotice',
  'chm_operpeace',
  'chm_sslonly',
  'chm_sslonly_compat',
  'createauthonly',
  'createoperonly',
  'extb_canjoin',
  'extb_channel',
  'extb_hostmask',
  'extb_oper',
  'extb_server',
  'extb_realname',
  'extb_usermode',
  'extb_extgecos',
  'extb_combi',
  'force_user_invis',
  'helpops',
  'hurt',
  'invite_notify',
  'ip_cloaking',
  'ip_cloaking_old',
  'ip_cloaking_3.0',
  'ip_cloaking_4.0',
  'override',
  'override_kick_immunity',
  'restrict-unauthenticated',
  'sno_channelcreate',
  'sno_farconnect',
  'sno_globalkline',
  'sno_globalnickchange',
  'sno_globaloper',
  'sno_whois',
  'umode_noctcp',
  'm_adminwall',
  'm_echotags',
  'm_extendchans',
  'm_findforwards',
  'm_identify',
  'm_locops',
  'm_mkpasswd',
  'm_ojoin',
  'm_okick',
  'm_omode',
  'm_opme',
  'm_sendbans',
  'm_webirc',
  'm_roleplay',
  'hide_uncommon_channels',
  'no_kill_services',
  'no_locops',
  'no_oper_invis',
  'sasl_usercloak',
  'spy_admin_notice',
  'spy_info_notice',
  'spy_links_notice',
  'spy_motd_notice',
  'spy_stats_notice',
  'spy_stats_p_notice',
  'spy_trace_notice',
  'drain',
  'example_module'
]

foreach extension : extensions
  shared_module(extension,
    '@0@.c'.format(extension),
    link_with: [librb_lib, ircd_lib],
    include_directories: [librb_inc, base_inc],
    name_prefix: '')
endforeach

hyperscan_dep = dependency('hyperscan', required: false)

if hyperscan_dep.found()
  shared_module('filter',
    'filter.c',
    dependencies: [hyperscan_dep],
    link_with: [librb_lib, ircd_lib],
    include_directories: [librb_inc, base_inc],
    name_prefix: '')
endif
