subdir('core')

modules = [
  'cap_account_tag',
  'cap_prop_notify',
  'cap_server_time',
  'cap_sts',
  'chm_nocolour',
  'chm_noctcp',
  'extb_account',
  'extb_group',
  'extb_ssl',
  'um_callerid',
  'um_regonlymsg',
  'm_accept',
  'm_admin',
  'm_alias',
  'm_away',
  'm_cap',
  'm_capab',
  'm_certfp',
  'm_challenge',
  'm_chghost',
  'm_close',
  'm_connect',
  'm_dline',
  'm_encap',
  'm_etrace',
  'm_grant',
  'm_help',
  'm_info',
  'm_invite',
  'm_ircx_access',
  'm_ircx_base',
  'm_ircx_prop',
  'm_ircx_prop_adminkey',
  'm_ircx_prop_member_of',
  'm_ircx_prop_onjoin',
  'm_ircx_prop_opkey',
  'm_ison',
  'm_kline',
  'm_knock',
  'm_links',
  'm_list',
  'm_lusers',
  'm_map',
  'm_monitor',
  'm_motd',
  'm_names',
  'm_oper',
  'm_operspy',
  'm_pass',
  'm_ping',
  'm_pong',
  'm_post',
  'm_privs',
  'm_rehash',
  'm_restart',
  'm_resv',
  'm_sasl',
  'm_scan',
  'm_services',
  'm_set',
  'm_signon',
  'm_snote',
  'm_starttls',
  'm_stats',
  'm_svinfo',
  'm_tb',
  'm_testline',
  'm_testmask',
  'm_tginfo',
  'm_time',
  'm_topic',
  'm_trace',
  'm_unreject',
  'm_user',
  'm_userhost',
  'm_users',
  'm_version',
  'm_wallops',
  'm_who',
  'm_whois',
  'm_whowas',
  'm_xline',
  'sno_routing'
]

foreach module : modules
  shared_module(module,
    '@0@.c'.format(module),
    link_with: [librb_lib, ircd_lib],
    include_directories: [librb_inc, base_inc],
    name_prefix: '')
endforeach
