librb_version_c = custom_target(
  'version.c',
  input: 'version.c.SH',
  output: 'version.c',
  command: ['sh', '@INPUT@', '@OUTPUT@']
)

librb_lib = shared_library('rb',
  'unix.c',
  'win32.c',
  'crypt.c',
  'balloc.c',
  'commio.c',
  'mbedtls.c',
  'openssl.c',
  'gnutls.c',
  'nossl.c',
  'event.c',
  'rb_lib.c',
  'rb_memory.c',
  'linebuf.c',
  'tools.c',
  'helper.c',
  'devpoll.c',
  'epoll.c',
  'poll.c',
  'ports.c',
  'sigio.c',
  'select.c',
  'kqueue.c',
  'rawbuf.c',
  'patricia.c',
  'dictionary.c',
  'radixtree.c',
  'arc4random.c',
  librb_version_c,
  librb_serno_h,
  include_directories: [librb_inc]
)
